# F4Flight

./: .gitignore  CMakeLists.txt  DIGI_AUDIT.md  DIGI_AUDIT_ROUND3.md  README.md  baseline_summary.json  fp_report.html  my_report.html  my_report_all.html  worklog.md
campaign/: CMakeLists.txt
campaign/include/f4flight/campaign/: campaign_generator.h  campaign_io.h  campaign_state.h  cover_type.h  objective.h  road_network.h  terrain_map.h  unit.h
campaign/src/: campaign_generator.cpp  campaign_io.cpp  campaign_state.cpp  unit.cpp
digi/: CMakeLists.txt
digi/include/f4flight/digi/: digi.h  digi_brain.h  digi_entity.h  digi_skill.h  digi_state.h  steering.h  steering_utils.h
digi/src/: digi_brain.cpp  steering.cpp
digi/src/atc/: atc_controller.cpp
digi/src/autopilot/: autopilot.cpp
digi/src/decision/: decision_routines.cpp  flight_lead.cpp
digi/src/defensive/: collision_avoid.cpp  guns_jink.cpp  handle_threat.cpp  missile_defeat.cpp
digi/src/formation/: formation_file_loader.cpp
digi/src/ground/: ground_avoid.cpp  ground_ops.cpp
digi/src/maneuvers/: maneuver_primitives.cpp
digi/src/offensive/: bvr_engage.cpp  guns_engage.cpp  merge.cpp  missile_engage.cpp  roll_and_pull.cpp
digi/src/sensors/: radar_sensor.cpp  rwr_sensor.cpp  sensor_fusion.cpp  visual_sensor.cpp
digi/src/wingman/: wingman_ai.cpp  wingman_maneuvers.cpp  wingman_state.cpp
flight/: CMakeLists.txt
flight/include/f4flight/flight/: aerodynamics.h  aircraft_config.h  aircraft_state.h  atmosphere.h  dat_loader.h  engine.h  eom.h  f4flight.h  fcs.h  flight_model.h  gear.h  json_io.h
flight/src/: aerodynamics.cpp  aircraft_config.cpp  dat_loader.cpp  engine.cpp  eom.cpp  fcs.cpp  flight_model.cpp  gear.cpp  json_io.cpp
flight/src/config/: f16c_config.cpp
tests/: CMakeLists.txt  COVERAGE.md  TESTING_STRATEGY.md  test_aerodynamics.cpp  test_dat_loader.cpp  test_engine.cpp  test_eom.cpp  test_f16c_config.cpp  test_fcs.cpp  test_flight_model.cpp  test_json_io.cpp  test_main.cpp  test_steering.cpp  test_types.cpp
tests/ManuverTest/: maneuver_test.cpp  maneuver_test.h
tests/ManuverTest/scenarios/: scenario_basic.cpp  scenario_combat.cpp  scenario_flightplan.cpp
tests/digi/scenarios/: scenario_ai_basic.cpp  scenario_ai_cruise.cpp  scenario_ai_flightplan.cpp  scenario_digi_aar.cpp  scenario_digi_baseline.cpp  scenario_digi_bvr.cpp  scenario_digi_collision.cpp  scenario_digi_defensive.cpp  scenario_digi_e2e_aar.cpp  scenario_digi_e2e_formation.cpp  scenario_digi_e2e_ground_attack.cpp  scenario_digi_e2e_mission.cpp  scenario_digi_flightplan.cpp  scenario_digi_formation.cpp  scenario_digi_formation_maneuver.cpp  scenario_digi_formation_types.cpp  scenario_digi_ground_attack.cpp  scenario_digi_ground_attack_profiles.cpp  scenario_digi_groundops.cpp  scenario_digi_guns.cpp  scenario_digi_guns_rear.cpp  scenario_digi_loiter_orbit.cpp  scenario_digi_merge.cpp  scenario_digi_missile_engage.cpp  scenario_digi_rtb.cpp  scenario_digi_sensors.cpp  scenario_digi_separate.cpp  scenario_digi_tactics.cpp  scenario_digi_wvr.cpp  scenario_digi_wvr_defensive.cpp
tests/digi/scenarios/e2e/: scenario_digi_e2e_aar.cpp  scenario_digi_e2e_formation.cpp  (+7 more)
tests/digi/unit/: test_campaign.cpp  test_digi.cpp  test_digi_autopilot.cpp  test_digi_comms.cpp  test_digi_defensive.cpp  test_digi_flight_lead.cpp  test_digi_flight_phase.cpp  test_digi_formation_loader.cpp  test_digi_offensive.cpp  test_digi_radio_calls.cpp  test_digi_round5.cpp  test_digi_round6.cpp  test_digi_round7.cpp  test_digi_sensors.cpp  test_digi_weapons.cpp  test_digi_wingman.cpp  test_state_tree.cpp  test_steering.cpp
tests/fixtures/: a10a.json  a50.json  a7e.json  amx.json  an24.json  an72.json  av8b+.json  b1b.json  b52g.json  e8c.json  ea6b.json  ef111a.json  ef2000.json  f111e.json  f111f.json  f14b.json  f14d.json  f15a.json  f15cj.json  f15e220.json  f15e229.json  f15i.json  f15k.json  f16abk15il.json  f16ambe.json  f16b15.json  f16bk15.json  f16bk25.json  f16bk30agrs.json  f16bk32agrs.json  f16bk52+.json  f16bk52.json  f16cbk30il.json  f16cbk40il.json  f16cbk52+eg.json  f16d52+rsaf.json  f16dm52.json  f16ibk52+il.json  f18c.json  f22a.json  (+27 more)
tests/fixtures/campaign/: Korea KTO.tdf  KoreaObj.HDR  TERRAIN_POLAK.BIL  TERRAIN_POLAK.HDR  TERRAIN_POLAK.NRM  TERRAIN_POLAK.TID  THEATER.MAP  THEATER.MEA  THEATER_Polak.O2
tests/fixtures/formations/: test_formdat.fil
tests/flight/scenarios/: scenario_fcs_engine.cpp  scenario_fcs_glimits.cpp  scenario_fcs_roll.cpp
tests/flight/unit/: test_aerodynamics.cpp  test_atmosphere.cpp  test_dat_loader.cpp  test_engine.cpp  test_eom.cpp  test_f16c_config.cpp  test_fcs.cpp  test_flight_model.cpp  test_gear.cpp  test_json_io.cpp  test_lookup.cpp  test_math.cpp  test_types.cpp  test_units.cpp
tests/framework/: scenario_assertions.h  scenario_framework.cpp  scenario_framework.h
tests/maneuver/: maneuver_test.cpp  maneuver_test.h  maneuver_test_assertions.h
tests/maneuver/scenarios/: scenario_ai_basic.cpp  scenario_ai_cruise.cpp  scenario_ai_flightplan.cpp  scenario_basic.cpp  scenario_combat.cpp  scenario_digi_defensive.cpp  scenario_digi_groundops.cpp  scenario_digi_guns.cpp  scenario_digi_sensors.cpp  scenario_digi_wvr.cpp  scenario_engine.cpp  scenario_fcs_engine.cpp  scenario_fcs_glimits.cpp  scenario_fcs_roll.cpp  scenario_flightplan.cpp  scenario_glimits.cpp  scenario_roll.cpp
tests/unit/: test_atmosphere.cpp  test_dat_loader.cpp  test_digi.cpp  test_digi_comms.cpp  test_digi_defensive.cpp  test_digi_offensive.cpp  test_digi_sensors.cpp  test_digi_weapons.cpp  test_engine.cpp  test_eom.cpp  test_fcs.cpp  test_flight_model.cpp  test_gear.cpp  test_json_io.cpp  test_lookup.cpp  test_math.cpp  test_steering.cpp  test_units.cpp
tools/: CMakeLists.txt  README.md  dat2json.cpp  dat_validate.cpp  f4flight_viz.cpp  json_diff.cpp  trace.h  trace2svg.cpp  tune_profile.cpp
tools/dat_tools/: dat2json.cpp  dat_validate.cpp  json_diff.cpp
tools/viz/: cmap_html_template.cpp  cmap_viz.cpp  f4flight_viz.cpp  html_report.cpp  html_report.h  template.html  trace.cpp  trace.h  trace2html.cpp  trace2svg.cpp
(+243 files in other folders)
